# loki-worker-k8s-operator

./: .gitignore  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: issues.yaml
lib/charms/istio_beacon_k8s/v0/: service_mesh.py
lib/charms/tempo_k8s/v1/: charm_tracing.py  tracing.py
src/: charm.py  loki.py  loki_cluster.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/scenario/: conftest.py  test_deploy.py
tests/unit/: test_charm.py
