# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "loki-worker-k8s"
version = "0.0"
requires-python = "~=3.8"

dependencies = [
  "ops",
  "cosl>=1.0",
  "coordinated-workers",
  "pydantic>=2",
  "opentelemetry-exporter-otlp-proto-http",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "coverage[toml]",
  "ops[testing]",
  # Integration
  "juju",
  "pytest-operator",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

# Formatting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

# Linting tools configuration
[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D105",  # Missing docstring in magic method
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
extraPaths = ["src", "lib"]
pythonVersion = "3.8"
pythonPlatform = "Linux"

[tool.codespell]
skip = ".git,.tox,build,lib,venv*,.mypy_cache,icon.svg"
ignore-words-list = "assertIn"
